crates/shipper-cli/tests/snapshots/e2e_expanded__publish_missing_manifest.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: "normalize_tempdir_stderr(&stderr, td.path())"
---
Error: failed to load release plan for `publish` - next steps:
  * verify `--manifest-path` points at the workspace Cargo.toml: <TMPDIR>/no-such/Cargo.toml
  * run `cargo metadata --manifest-path "<TMPDIR>/no-such/Cargo.toml"` to inspect the underlying Cargo error
  * run `shipper plan` first to inspect publishable and skipped crates
  Common blockers to check:
  * missing manifest: pass `--manifest-path <workspace>/Cargo.toml`
  * selected package not publishable: check `publish = false` and package spelling
  * Cargo metadata failure: run the printed `cargo metadata` command directly

Caused by:
    0: failed to execute cargo metadata
    1: `cargo metadata` exited with an error: error: manifest path `<TMPDIR>/no-such/Cargo.toml` does not exist
