crates/shipper-cli/tests/snapshots/e2e_expanded__resume_corrupted_state_file.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&normalize_stderr(&stderr))
---
Error: resume failed — next steps:
  * if plan-ID mismatch: either `shipper clean` and start a fresh plan, or pass `--force-resume` if you understand the divergence
  * inspect <STATE_DIR>/events.jsonl for the authoritative event log
  * inspect <STATE_DIR>/state.json to see what was already published
  * run `shipper status` to compare local versions to the registry
  Common blockers to check:
  * state mismatch: compare the current plan with the saved `plan_id` before forcing
  * corrupt state: preserve `events.jsonl`, then rebuild or clean state intentionally
  * stale lock: verify no other release process owns the lock before forcing
  * ambiguous state: inspect `reconciliation.json` and let resume reconcile registry truth

Caused by:
    0: failed to parse state JSON <STATE_DIR>/state.json
    1: expected value at line 1 column 1
