crates/shipper-cli/tests/snapshots/e2e_expanded__resume_missing_manifest.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: "normalize_tempdir_stderr(&stderr, td.path())"
---
Error: failed to load release plan for `resume` - next steps:
  * verify `--manifest-path` points at the workspace Cargo.toml: <TMPDIR>/nonexistent/Cargo.toml
  * run `cargo metadata --manifest-path "<TMPDIR>/nonexistent/Cargo.toml"` to inspect the underlying Cargo error
  * run `shipper plan` first to inspect publishable and skipped crates

Caused by:
    0: failed to execute cargo metadata
    1: `cargo metadata` exited with an error: error: manifest path `<TMPDIR>/nonexistent/Cargo.toml` does not exist
