crates/shipper-cli/tests/snapshots/e2e_expanded__resume_no_state_file.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&normalize_stderr(&stderr))
---
Error: nothing to resume: no publish state at <STATE_DIR>/state.json
  * run `shipper plan` to preview the release
  * run `shipper publish` to start it — `resume` continues an interrupted run, it does not begin one
