crates/shipper-cli/tests/snapshots/e2e_expanded__status_multi_crate_all_missing.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&stdout)
---
plan_id: <PLAN_ID>

core-lib@0.2.0: missing
mid-lib@0.3.0: missing
top-app@0.4.0: missing
