crates/shipper-cli/tests/snapshots/e2e_expanded__status_multi_crate_all_published.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&stdout)
---
plan_id: <PLAN_ID>

core-lib@0.2.0: published
mid-lib@0.3.0: published
top-app@0.4.0: published
